gcc/testsuite/g++.old-deja/g++.jason/rfg21.C
// { dg-do assemble  }
char array0[4] = "abcde";          /* { dg-error "" } initializer too long */
